# hephaestus

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
include/hephaestus/: log.h
src/: log.cpp
